--- a/src/components/SignUp/style.css
+++ b/src/components/SignUp/style.css
@@ -4,11 +4,11 @@
     top: 50%;
     /* padding: 60px; */
     height: 56%;
-    width: 36%;
+    width: 30%;
     border: 2px solid black;
     box-shadow: 0 10px 8px 4px black;
     transform: translate(-50%, -50%);
-    background-color: lightgray;
+    background-color: #d25050;
 }
 
 .header {
